Update versao platform